# sample-app

./: .gitignore  docker-compose.yaml
api/: .devcontainer.json  Dockerfile.api  Dockerfile.database  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
api/app/: main.py
api/app/application/: commands.py  query_models.py
api/app/application/query_service/: article_query_service.py
api/app/application/use_case/: post_article_use_case.py  post_doc_use_case.py  post_profile_use_case.py
api/app/application/usecase/: like_article_usecase.py  post_article_usecase.py  unlike_article_usecase.py
api/app/domain/: exceptions.py
api/app/domain/entity/: article.py  doc.py  liked_article.py  profile.py  user.py
api/app/domain/repository/: article_repository.py  doc_repository.py  liked_article_repository.py  profile_repository.py  user_repository.py
api/app/domain/service/: profile_service.py
api/app/domain/value_object/: article_id.py  article_text.py  article_title.py  department_id.py  doc_id.py  doc_text.py  doc_title.py  grade_id.py  joining_date.py  user_id.py  years.py
api/app/infrastructure/db/: sqlite.py  (+2 more)
api/app/interface/: queries.py  requests.py  responses.py  usecase_di.py
api/app/shared/: config.py  env.py  jwt.py  oauth2.py  pydantic_fields.py
api/tests/: conftest.py  test_get_article.py  test_get_article_count.py  test_get_articles.py  test_get_articles_by_user_id.py  test_get_liked_article.py  test_get_my_articles.py  test_like_article.py  test_login.py  test_post_article.py  test_refresh_token.py  test_signup.py  test_unlike_article.py
(+154 files in other folders)
